# gesture-rehab-engine

./: .gitignore  README.md  pyproject.toml
experiments/: __init__.py  analysis.py  plot_phase5.py  run_comparison.py  runner.py  strategies.py  virtual_patient.py
scripts/: build_descriptors.py  demo_cold_start.py  demo_progress.py  demo_synthetic.py  download_hagrid_annotations.py  export_demo_data.py  generate_inverse_progress_figures.py  generate_stage_html_report.py  package_code_snapshot.py  package_plugin_bundle.py  plot_gesture_mapping.py  plugin_score.py  simulate_progression.py
src/: challenge_zone.py  config.py  data_loader.py  demo_profiles.py  descriptors.py  features.py  feedback.py  geometry.py  labels.py  plugin_api.py  progress_analyzer.py  progression.py  report_generator.py  scorer.py  threshold_manager.py  user_model.py
tests/: test_build_pipeline.py  test_data_loader.py  test_descriptors.py  test_experiments.py  test_geometry.py  test_plugin_api.py  test_progress.py  test_progression.py  test_scorer.py  test_threshold.py
web_demo/: app.js  browser_features.js  browser_scorer.js  browser_threshold.js  demo_data.json  index.html  runtime_config.json  styles.css
