[project]
name = "gesture-scoring-engine"
version = "0.1.0"
description = "Geometry-based gesture scoring and progress-analysis research prototype."
requires-python = ">=3.12"
dependencies = [
    "numpy>=1.24",
    "matplotlib>=3.7",
    "mediapipe>=0.10",
    "opencv-python>=4.8",
    "pytest>=7.4",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
